@@ -74,6 +74,7 @@ following names for their contribution to the product.
 * Emufarmers
 * FunPika
 * Happy-melon
+* Ireas
 * Jeremy Baron
 * Jidanni
 * Jimmy Xu
